stop the megamenu wrapping when eg rotating to landscape on an ipad, when the toggle is open [PT #182303467]

--- a/src/UQSiteHeader/css/overrides.css
+++ b/src/UQSiteHeader/css/overrides.css
@@ -119,7 +119,7 @@ span.displayText {
     border-bottom-width: 0;
 }
 
-@media (max-width: 80rem) {
+@media (max-width: 64rem) {
     .desktop-only {
         display: none !important;
     }
